--- a/blogspot.html
+++ b/blogspot.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <h1>Curso Git</h1>
-        <p>Mi nombre es Guillermo Garcia</p>
+        <div id="container">
+            <div id="post">
+                <h1>Curso Git</h1>
+                <p>Mi nombre es Guillermo Garcia</p>
+            </div>            
+        </div>
     </body>
 </html>
