commit en cabezera

--- a/blogspot.html
+++ b/blogspot.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabezera">
+                Cabezera
+            </div>
             <div id="post">
                 <h1>Curso Git</h1>
                 <p>Mi nombre es Guillermo Garcia</p>
