--- a/blogspot.html
+++ b/blogspot.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabezera">
-                Cabezera
+                Cabezera del sitio
             </div>
             <div id="post">
                 <h1>Curso Git</h1>
