--- a/blogspot.html
+++ b/blogspot.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Curso Git</h1>
                 <p>Mi nombre es Guillermo Garcia</p>
+                <p>soy ingeniero</p>
             </div>            
         </div>
     </body>
