--- a/blogspot.html
+++ b/blogspot.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabezera">
+                <img src="images/thrust.png" style="width:450px;">
                 Cabezera del sitio web
             </div>
             <div id="post">
