--- a/blogspot.html
+++ b/blogspot.html
@@ -14,5 +14,8 @@
                 <p>hola guillermo</p>
             </div>            
         </div>
+        <div id="footer" style="backround:#000;color:#fff;">
+            Hecho por Guillermo
+        </div>
     </body>
 </html>
