color negro corregido

--- a/blogspot.html
+++ b/blogspot.html
@@ -15,7 +15,7 @@
                 <p>hola guillermo</p>
             </div>            
         </div>
-        <div id="footer" style="backround:#000;color:#fff;">
+        <div id="footer" style="background:#000;color:#fff;">
             Hecho por Guillermo
         </div>
     </body>
