foooter con nombre completo

--- a/blogspot.html
+++ b/blogspot.html
@@ -16,7 +16,7 @@
             </div>            
         </div>
         <div id="footer" style="background:#000;color:#fff;">
-            Hecho por Guillermo
+            Hecho por Guillermo Garcia
         </div>
     </body>
 </html>
